fixing minor problems
