# internal/interfaces/http/dto.go
@@ -1,0 +1,25 @@
+package http
+
+import "encoding/xml"
+
+type HoliDay struct {
+	Date        string `json:"date" xml:"date"`
+	Title       string `json:"title" xml:"title"`
+	Type        string `json:"type" xml:"type"`
+	Inalienable bool   `json:"inalienable" xml:"inalienable"`
+	Extra       string `json:"extra" xml:"extra"`
+}
+
+type HoliDays []HoliDay
+
+type Dto struct {
+	XMLName xml.Name `json:"-" xml:"response"`
+
+	Status string   `json:"status" xml:"status"`
+	Data   HoliDays `json:"data" xml:"data>holiday"`
+}
+
+type ErrorResponse struct {
+	Message string `json:"message" example:"error"`
+	Code    int    `json:"code" example:"404"`
+}
