# internal/interfaces/http/handler/handler.go
@@ -1,14 +1,12 @@
 package handler
 
 import (
-	"encoding/json"
 	"log"
 	"net/http"
-	"strings"
-	"time"
 
 	"github.com/gin-gonic/gin"
 	"github.com/maneul0498-netizen/unicomer_tech_challenge/internal/appication/service"
+	dto "github.com/maneul0498-netizen/unicomer_tech_challenge/internal/interfaces/http"
 )
 
 type Handler struct {
@@ -29,6 +27,7 @@ func NewHandler(s service.IService) *Handler {
 // @Param type query string false "holiday type"
 // @Param Accept header string false "application/json or application/xml"
 // @Produce json,xml
+// @Failure 500 {object} http.ErrorResponse
 // @Router /holidays [get]
 func (h *Handler) Get(c *gin.Context) {
 
@@ -36,33 +35,12 @@ func (h *Handler) Get(c *gin.Context) {
 	filterToDate := c.Query("toDate")
 	filterByType := c.Query("type")
 
-	d := h.service.Get()
-
-	var data Dto
-	err := json.Unmarshal(d, &data)
+	holiDays, err := h.service.Get(filterFromDate, filterToDate, filterByType)
 
 	if err != nil {
 		log.Println(err.Error())
-		c.JSON(http.StatusInternalServerError, ErrResponse{Message: err.Error(), Code: http.StatusInternalServerError})
+		c.JSON(http.StatusInternalServerError, dto.ErrorResponse{Message: err.Error(), Code: http.StatusInternalServerError})
 		return
-	}
-
-	holiDays := HoliDays{}
-
-	if filterFromDate != "" && filterToDate != "" {
-		holiDays, err = FilterByDateRange(data.Data, filterFromDate, filterToDate)
-		if err != nil {
-			log.Println(err.Error())
-			c.JSON(http.StatusInternalServerError, ErrResponse{Message: err.Error(), Code: http.StatusInternalServerError})
-			return
-		}
-
-	} else {
-		holiDays = data.Data
-	}
-
-	if filterByType == "Civil" || filterByType == "Religioso" {
-		holiDays = FilterByType(holiDays, filterByType)
 	}
 
 	switch c.GetHeader("Accept") {
@@ -72,51 +50,4 @@ func (h *Handler) Get(c *gin.Context) {
 		c.JSON(http.StatusOK, &holiDays)
 	}
 
-}
-
-func FilterByDateRange(holiDays HoliDays, fromDate, toDate string) (HoliDays, error) {
-
-	const layout = "2006-01-02"
-
-	from, err := time.Parse(layout, fromDate)
-	if err != nil {
-		return nil, err
-	}
-
-	to, err := time.Parse(layout, toDate)
-	if err != nil {
-		return nil, err
-	}
-
-	result := []HoliDay{}
-
-	for _, holiday := range holiDays {
-
-		holidayDate, err := time.Parse(layout, holiday.Date)
-		if err != nil {
-			continue
-		}
-
-		if (holidayDate.Equal(from) || holidayDate.After(from)) &&
-			(holidayDate.Equal(to) || holidayDate.Before(to)) {
-
-			result = append(result, holiday)
-		}
-	}
-
-	return result, nil
-}
-
-func FilterByType(holiDays HoliDays, holidayType string) []HoliDay {
-
-	result := []HoliDay{}
-
-	for _, holiday := range holiDays {
-
-		if strings.EqualFold(holiday.Type, holidayType) {
-			result = append(result, holiday)
-		}
-	}
-
-	return result
 }
